# telematics_insurance_model

./: .gitignore  README.md  pyproject.toml  readme.txt  telematics_data.csv
data/: driver_level_data.csv
docs/: executive_report.md  executive_report_draft.md  insuity_asessment_prompt.md
models/pre-trained/: log_reg_telematics.pkl  log_reg_traditional+telematics.pkl  log_reg_traditional.pkl
notebooks/: Untitled.ipynb  Untitled2.ipynb  how_risk_reflects_premium.ipynb  risk_modelling.ipynb  trip_analysis.ipynb
sandbox/: poission_sampling.py  simulate_trip.py  simulate_trip_2.py  simulate_trip_3.py  telematics_simple.py
src/telematics_insurance_model/core/: create_train_test_sets.py  evaluate_model.py  generate_telematics.py  preprocess_data.py  train_logistic_regressor.py
src/telematics_insurance_model/helpers/: feature_engineering.py  feature_selection.py  helpers.py  logger.py  processing.py
src/telematics_insurance_model/models/: models.py
src/telematics_insurance_model/utils/: append_telematics.py  simulate.py  visualization.py
